objects/et4ae5__ET4AE_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>et4ae5__Configuration_Wizard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration Wizard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>et4ae5__Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__JBPlatformEventEnable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JB Platform Event Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__QA_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Remote_Site_Setting_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Site Setting Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ET4AE Configuration</label>
</CustomObject>